# ros2-practice-project

./: README.md
install/: local_setup.sh  setup.sh
install/robot_cleaner/lib/robot_cleaner/: move  rotate
install/robot_cleaner/share/ament_index/resource_index/parent_prefix_path/: robot_cleaner
install/robot_cleaner/share/robot_cleaner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_cleaner/share/robot_cleaner/cmake/: robot_cleanerConfig.cmake
log/: latest_build
src/robot_cleaner/: CMakeLists.txt
src/robot_cleaner/src/: gotogoal.cpp  move.cpp  rotate.cpp
